[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offseckit"
version = "0.1.0"
description = "Free offensive security toolkit for your terminal — reverse shells, encoding, hashing, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "OffSecKit", email = "dev@offseckit.com" }]
keywords = [
    "offensive-security",
    "pentesting",
    "red-team",
    "bug-bounty",
    "cybersecurity",
    "hacking",
    "security-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["click>=8.0"]

[project.scripts]
osk = "osk.cli:main"

[project.urls]
Homepage = "https://offseckit.com"
Repository = "https://github.com/offseckit/cli"
